--- a/css/style.css
+++ b/css/style.css
@@ -977,51 +977,35 @@ ul {
 #main_Cart {
     width: 80%;
     margin: auto;
-    
+    text-align: center;
 }
 
 #main_Cart table {
-    margin: 20px auto;
-    border-collapse: collapse;
-    background-color: #d1d1d1;
-    border-radius: 10px;
+    margin: auto;
 }
 
 #main_Cart td {
-    
+    border: solid 2px black;
     width: 200px;
-    height: fit-content;
-   
-}
-
-#main_Cart th, #main_Cart td {
-    padding: 12px;
+    height: 190px;
     text-align: center;
-    border-bottom: 1px solid #ddd;
-    
+    object-fit: cover;
 }
 
-
-#otherChoose {
-    border: solid black 1px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+.Poster_Cart{
+    height: 100%;
+    width: 100%;
 }
 
-.Poster_Cart {
-    height: 85%;
-    width: 85%;
-
+.img_Other{
+    height: 100px;
+    width: 100px;
 }
 
-.Mon {
-    height: 25%;
-    width: 25%;
-    display: inline-block;
+#ThanhToan td{
+    height: 50px;
 }
 
-.Mon img {
-    height: 30%;
-    width: 30%;
+#XacNhanDonHang td{
+    height: 50px;
 }
