--- a/css/style.css
+++ b/css/style.css
@@ -1052,7 +1052,7 @@ ul {
 #main_Cart td, #main_Cart th {
     
    
-    padding: 20px;
+    padding: 20px 10px;
     text-align: center;
     object-fit: cover;
     border-bottom: 2px solid #929292;
