--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ header .container {
     padding: 10px 20px;
 }
 
-header .navbar{
+header .navbar {
     align-content: center;
 }
 
@@ -328,15 +328,12 @@ header .navbar ul li a.active {
 
 
 /* register + login */
-.wrapper {
-    height: 80vh;
-}
 
 .form-container {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    margin: 5% 0px 10% 0px;
 }
 
 .form-box {
@@ -433,7 +430,7 @@ header .navbar ul li a.active {
 
 @media (max-width: 740px) {
     .form-container {
-        margin: 0 30px;
+        margin: 15% 30px;
     }
 }
 
@@ -960,11 +957,11 @@ ul {
     margin-bottom: 20px;
 }
 
-.text_lienhe p{
+.text_lienhe p {
     line-height: 1.8;
 }
 
-.text_lienhe h2{
+.text_lienhe h2 {
     font-size: 30px;
     border-bottom: #241e1e solid 1.8px;
     font-weight: 500;
@@ -994,13 +991,14 @@ ul {
     white-space: nowrap;
 }
 
-.form_table input{
+.form_table input {
     width: 100%;
     padding: 10px;
     margin: 5px 0;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
+
 .form_table textarea {
     width: 100%;
     padding: 10px;
