--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,14 @@ header .navbar ul li a.active {
     margin-top: 20px;
 }
 
+#footer  h3 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+#footer a, #footer  li{
+    margin: 5px 0;
+}
+
 
 .footer-nav {
     display: grid;
